[package]
name = "gem_miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
rand = "0.8.5"
pixels = "0.9.0"
winit = "0.26"
winit_input_helper = "0.12.0"
image = "0.24.2"
game-loop = { version = "0.9.1", features = ["window"] }
log = "0.4.17"
